language_tests/source_files/invalid/for_await_non_async_iterable.tr
struct NotAsyncIterable {
    x: int32
}

func main() async {
    let source = NotAsyncIterable { x: 1 }
    for await value in source {
        let _ = value
    }
}
